--- a/RandomFileOpener/RandomFileOpener.csproj
+++ b/RandomFileOpener/RandomFileOpener.csproj
@@ -61,16 +61,10 @@
     <ManifestKeyFile>RandomFileOpener_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
-  </PropertyGroup>
-  <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
@@ -122,6 +116,7 @@
     <EmbeddedResource Include="View\OptionsWindows.resx">
       <DependentUpon>OptionsWindows.cs</DependentUpon>
     </EmbeddedResource>
+    <Compile Include="Enum\ExplorerProccessMode.cs" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
