--- a/RandomFileOpener/App.config
+++ b/RandomFileOpener/App.config
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="RandomFileOpener.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/>
     </startup>
+    <userSettings>
+        <RandomFileOpener.Properties.Settings>
+            <setting name="MainPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="MovePath1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="MovePath2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SearchSubDir" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SearchUnique" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="InstantOpen" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ValidFileExtentions" serializeAs="String">
+                <value />
+            </setting>
+        </RandomFileOpener.Properties.Settings>
+    </userSettings>
 </configuration>
