added support for move path features custom labels.

--- a/RandomFileOpener/App.config
+++ b/RandomFileOpener/App.config
@@ -31,6 +31,12 @@
             <setting name="ValidFileExtentions" serializeAs="String">
                 <value />
             </setting>
+            <setting name="MovePathBtnLabel1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="MovePathBtnLabel2" serializeAs="String">
+                <value />
+            </setting>
         </RandomFileOpener.Properties.Settings>
     </userSettings>
 </configuration>
