--- a/RandomFileOpener/Properties/Settings.settings
+++ b/RandomFileOpener/Properties/Settings.settings
@@ -23,5 +23,11 @@
     <Setting Name="ValidFileExtentions" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MovePathBtnLabel1" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="MovePathBtnLabel2" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
