show info messages option

--- a/RandomFileOpener/App.config
+++ b/RandomFileOpener/App.config
@@ -37,6 +37,9 @@
             <setting name="MovePathBtnLabel2" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ShowInformationMessages" serializeAs="String">
+                <value>False</value>
+            </setting>
         </RandomFileOpener.Properties.Settings>
     </userSettings>
 </configuration>
